--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -6,5 +6,8 @@
 	</h3>
 <%end%>
 
+<form action="<%= place_path @place %>" method="post">
+	<input type="hidden" name="_method" value="put">  
+
 
 <%= render "form" %>
