--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,14 +1,15 @@
-<% @places.each do |place| %>
-	<br/>
-	<li>
-	<b>Name:</b>	<a href="<%= place_path(place) %>"><%= place.name %></a>
-	<b>Address</b>	<%= place.address %>
-	<b>Phone Number:</b>	<%= place.phone_number %>
-	<b>Contact Mail:</b>	<%= place.contact_mail %>
-	<b>Established at:</b> <%= place.established_at%>
-	<b>Description:</b> <%= place.description %>
-	<b>Category: </b> <%= place.category.name %>
-	</li>
+<% @places.each do |p| %>
+	<div align="center"> <br/>
+	<b>Name:</b><%= p.name %></br>
+	<b>Address</b>	<%= p.address %></br>
+	<b>Phone Number:</b>	<%= p.phone_number %></br>
+	<b>Contact Mail:</b>	<%= p.contact_mail %></br>
+	<b>Established at:</b> <%= p.established_at%></br>
+	<b>Description:</b> <%= p.description %></br>
+	<b>Category: </b> <%= p.category.name %></br>
+	<hr/></div>
 <%end%>
-<br/>
-<a href="<%= new_place_path %>">Create new place</a>
+
+</br>
+<%=link_to "Yeni bir yer için tıklayın", new_place_path(@places)%>
+<%= link_to "Kategori Listesi", categories_path(@categories) %>
