--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -13,6 +13,12 @@
 	<%= f.label :description%><br>
 	<%= f.text_area :description, placeholder: 'description', rows: 10 %><br><br>
 	<%= f.select :category_id, @categories %><br><br>
+	<%= f.collection_check_boxes(:tag_ids, @tags, :id, :name) %>
+
+
+   <br />
+   <br />
+   <br />
 
 	<%= f.submit 'Gonder'%>
 <% end %>
