tasarım iyileştirmeleri ve myplaces eklentisi

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,4 @@
 <%=link_to "Yeni bir yer için tıklayın", new_place_path(@places)%><br>
-<%= link_to "Kategori Listesi", categories_path(@categories) %>
 <hr/>
 
 <% @places.each do |p| %>
@@ -13,3 +12,42 @@
 	<b>Category: </b> <%= p.category.name %></br>
 	<hr/></div>
 <%end%>
+
+<%= render 'place_list' %>
+
+<div class="row">
+	<div class="col-md-4">
+	  <div class="panel panel-default">
+	    <div class="panel-heading"><i class="fa fa-lightbulb-o"></i> Random Places</div>
+	    <div class="list-group">
+	    	<% @random_places.each do |place| %>
+	    		<%= link_to place.name, place_path(place), class: "list-group-item" %>
+	    	<% end %>
+	    </div>
+	  </div>
+	</div>
+	<div class="col-md-4">
+	  <div class="panel panel-default">
+	    <div class="panel-heading"><i class="fa fa-comments-o"></i> Son Yorumlar</div>
+	    <div class="list-group">
+	      <a href="#" class="list-group-item">Son Yorum #1</a>
+	      <a href="#" class="list-group-item">Son Yorum #2</a>
+	      <a href="#" class="list-group-item">Son Yorum #3</a>
+	      <a href="#" class="list-group-item">Son Yorum #4</a>
+	      <a href="#" class="list-group-item">Son Yorum #5</a>
+	    </div>
+	  </div>
+	</div>
+	<div class="col-md-4">
+	  <div class="panel panel-default">
+	    <div class="panel-heading"><i class="fa fa-star-o"></i> En İyi Fikirler</div>
+	    <div class="list-group">
+	      <a href="#" class="list-group-item">En İyi Fikir #1</a>
+	      <a href="#" class="list-group-item">En İyi Fikir #2</a>
+	      <a href="#" class="list-group-item">En İyi Fikir #3</a>
+	      <a href="#" class="list-group-item">En İyi Fikir #4</a>
+	      <a href="#" class="list-group-item">En İyi Fikir #5</a>
+	    </div>
+	  </div>
+	</div>
+</div>
