--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,27 +12,53 @@
     <nav id="navbar-top" class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
+        </button>
+          <%= link_to "inci.com", root_path, class: "navbar-brand" %>
           
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            
             <% if current_user.present? %>
               <li><a href="#"><%= current_user.email %></a></li>
-              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "Kategori Listesi", categories_path(@categories) %></li>
+                <li><%= link_to "My Places", mine_places_path %></li>
+                <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             <% else %>
+              <li><%= link_to "Kategori Listesi", categories_path(@categories) %></li>
               <li><%= link_to "Login", new_user_session_path %></li>
               <li><%= link_to "Register", new_user_registration_path %></li>
             <% end %>
-          
+          </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    
-  <body>
+    <br/>
+    <br/>
+    <br/>
+
+<div id="main_container" class="container">
+  
     <%= render "flash" %>
-    <%= yield %>
+
+   <div class="row">
+            <%= yield %>
+            <div class="col-sm-3">
+              
+
+            </div>
+            
+                  <div id="tags" class="nav-section">
+                    <h3>Etiketler</h3>
+                    <% @sidebar_tags.each do |t| %>
+                      <a href="#" class="label label-default"><%= t.name %></a>
+                    <% end %>
+                  </div>
+            </div>
+</div>
+
+<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </body>
 </html>
 
