--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -1,12 +1,13 @@
-<%= form_for [@place, @vote] do |f| %>
-  <% 5.times do |i| %>
-    <%= f.radio_button :rating, i+1 %>
-    <% (i+1).times do %>
-    <b>❤</b>
-      <i class='fa fa-star'></i>
+<% if current_user.present? %>
+  <%= form_for [@place, @vote] do |f| %>
+    <% 5.times do |i| %>
+      <%= f.radio_button :rating, i+1 %>
+      <% (i+1).times do %>
+        <i class='fa fa-star'></i>
+      <% end %>
+      <br />
     <% end %>
-    <br />
-  <% end %>
 
-  <%= f.submit "Vote", class: "btn btn-sm btn-primary" %>
+    <%= f.submit "Vote", class: "btn btn-sm btn-primary" %>
+  <% end %>
 <% end %>
